--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   margin-left: 300px;
   margin-right: 300px;
   color: rebeccapurple;
-  border: 1px solid blue;
+  border: 1px dotted red;
   background-color: rgb(222, 248, 239);
   
   text-align: center;
